pygobject (3.16.2-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Track stable releases in debian/watch.

 -- Michael Biebl <biebl@debian.org>  Sun, 21 Jun 2015 21:18:40 +0200

pygobject (3.14.0-1) unstable; urgency=medium

  * New upstream release.
  * Drop Add-protection-against-attempts-at-importing-static-.patch, included
    in this version.
  * Refresh 01_cairo_region.patch to apply to this version.
  * Bump g-i dependencies to >= 1.39 as per upstream configure.ac.
  * Bump Standards-Version to 3.9.6 (no changes necessary).

 -- Martin Pitt <mpitt@debian.org>  Tue, 23 Sep 2014 07:22:57 +0200

pygobject (3.13.90-1) experimental; urgency=medium

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 30 Aug 2014 17:11:07 +0200

pygobject (3.12.2-1) unstable; urgency=medium

  * New upstream release
  * d/p/Add-protection-against-attempts-at-importing-static-.patch
    + Added. Prevents segfault when importing old-style modules in programs
      using gi (From upstream git)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 30 Aug 2014 14:23:05 +0200

pygobject (3.12.1-1) unstable; urgency=medium

  * New upstream bug fix release.
  * Upload to unstable.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 Apr 2014 09:21:00 +0200

pygobject (3.12.0-1) experimental; urgency=medium

  * New upstream stable release for GNOME 3.12.

 -- Martin Pitt <mpitt@debian.org>  Mon, 24 Mar 2014 12:25:58 +0100

pygobject (3.11.91-1) experimental; urgency=medium

  * New upstream release.
  * Bump glib and gobject-introspection build depends as per upstream
    configure.ac.
  * Drop 00git_non_recursive_make_python.patch, fixed upstream.
  * debian/*.install: Drop libpyglib-gi-*.so, these disappeared upstream.
  * debian/tests/control: Add missing build-essential dep for the "build" test.
  * debian/rules: Fix cleaning.

 -- Martin Pitt <mpitt@debian.org>  Thu, 06 Mar 2014 10:30:47 +0100

pygobject (3.10.2-2) unstable; urgency=medium

  [ Colin Watson ]